--- a/Backoffice/Components/Clients/ClientActiveOrdersComponent.razor
+++ b/Backoffice/Components/Clients/ClientActiveOrdersComponent.razor
@@ -30,6 +30,7 @@
             <th>Status</th>
             <th>Type</th>
             <th>CreatedTime</th>
+            <th>Seq.Num</th>
             <th></th>
         </tr>
         </thead>
@@ -47,6 +48,7 @@
                 <td>@order.Status.ToString()</td>
                 <td>@order.Type.ToString()</td>
                 <td>@order.CreatedTime.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                <td>@order.LastSequenceId</td>
                 <td>
                     <ul class="nav">
                         <li><button type="button" class="btn-outline-danger btn" style="height: 20px; font-size: 10px" @onclick="@(() => CancelOrder(order.OrderId))">Cancel</button></li>
