--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -42,3 +42,4 @@
 @using Backoffice.Components.Prices
 @using Backoffice.Components.MarketInfo
 @using Backoffice.Components.MarketInfo.ApiKeys
+@using Backoffice.Components.Templates
