--- a/Backoffice/Components/MarketInfo/MarketInfoComponent.razor
+++ b/Backoffice/Components/MarketInfo/MarketInfoComponent.razor
@@ -15,6 +15,8 @@
         <th>Price</th>
         <th>OfficialWebsiteUrl</th>
         <th>WhitepaperUrl</th>
+        <th>AboutMore Template Id</th>
+        <th>AboutLess Template Id</th>
     </tr>
     </thead>
     <tbody>
@@ -35,6 +37,8 @@
             <td>@info.Price</td>
             <td>@info.OfficialWebsiteUrl</td>
             <td>@info.WhitepaperUrl</td>
+            <td>@info.AboutMoreTemplateId</td>
+            <td>@info.AboutLessTemplateId</td>
 
             <td>
                 <ul class="nav nav-tabs">
