--- a/Backoffice/Pages/Prices.razor
+++ b/Backoffice/Pages/Prices.razor
@@ -12,7 +12,9 @@
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.IndexPrices)" @onclick="SetIndexPrices" >IndexPrices</button>
     </li>
-
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.ConversionPrices)" @onclick="SetConversionPrices" >ConversionPrices</button>
+    </li>
 </ul>
 
 <div style="margin: 10px">
@@ -29,6 +31,10 @@
     @if (ActivePage == Menus.IndexPrices)
     {
         <IndexPricesComponent />
+    }
+    @if (ActivePage == Menus.ConversionPrices)
+    {
+        <ConversionIndexPricesComponent />
     }
 </div>
 
@@ -59,6 +65,11 @@
         SetActive(Menus.IndexPrices);
     }
 
+    private void SetConversionPrices()
+    {
+        SetActive(Menus.ConversionPrices);
+    }
+
     private void SetActive(Menus page)
     {
         ActivePage = page;
@@ -69,7 +80,8 @@
     {
         Prices,
         BasePrices,
-        IndexPrices
+        IndexPrices,
+        ConversionPrices
     }
  
 }
