refactoring portfolio simulation

--- a/Backoffice/Components/Liquidity/AssetPortfolio/LePortfolioSimulationComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LePortfolioSimulationComponent.razor
@@ -133,6 +133,7 @@
         {
             <tr>
                 <td>@trade.DateTime</td>
+                <td>@trade.WalletName</td>
                 <td>@trade.BaseAsset</td>
                 <td>@trade.QuoteAsset</td>
                 <td>@trade.BaseVolume</td>
