--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -15,6 +15,7 @@
 @using MyNoSqlServer.Abstractions
 @using Service.Liquidity.Engine.Grpc
 @using Service.Liquidity.Monitoring.Domain.Models
+@using Service.Liquidity.PortfolioHedger.Domain.Models
 
 @inject ILpWalletManagerGrpc _lpWalletManagerGrpc
 @inject IAssetPortfolioService _assetPortfolioService
