--- a/Backoffice/Components/Liquidity/AssetPortfolio/LeTradePortolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LeTradePortolioComponent.razor
@@ -4,6 +4,7 @@
 @using Backoffice.Services.SpotInstruments
 @using Service.Liquidity.Engine.Domain.Models.Wallets
 @using Service.Liquidity.Engine.Grpc
+@using Service.Liquidity.PortfolioHedger.Domain.Models
 @using Service.Liquidity.PortfolioHedger.Grpc
 @using Service.Liquidity.PortfolioHedger.Grpc.Models
 @using Service.Liquidity.Reports.Grpc
